# mawu

./: README.md  mawu.norg  meson.build
crates/mawu/: Cargo.toml
crates/mawu-cli/: Cargo.toml
crates/mawu-cli/src/: main.rs
crates/mawu/src/: lexer.rs  lib.rs  parser.rs  syntax.rs
crates/mawu/src/parser/: expr.rs  sink.rs
include/: errors.h
include/lexer/: identifiers.h  scanner.h  tokens.h
src/: errors.c  main.c
src/lexer/: scanner.c  tokens.c
